--- a/static/CSS/placestovisit/placestyle.css
+++ b/static/CSS/placestovisit/placestyle.css
@@ -50,15 +50,15 @@ button{
     position: absolute;
     height:20px;
     width:120px;
-    /* border-radius: 10px; */
+    border-radius: 0px;
 	/* background: linear-gradient(to left, #56c4d3,#006476 );  */
-    border-width: 1px;
-	background-color: rgb(255, 255, 255);
+    border: #ffffff 2px solid;
+	background-color: rgba(0, 0, 0, 0.484);
 	block-size: fit-content;
    
 }
 button>p{
-	color: rgb(0, 67, 38);
+	color: rgb(255, 255, 255);
 	text-align: center;
 	justify-content: center;
 	margin-top: 10px;
@@ -136,8 +136,7 @@ h2,P{
 		margin-top: 0px;
 	  }
 	  button>img{
-		height:35px;
-		width:35px;
+		
 		
 		text-align: center;
 		justify-content: center;
@@ -148,18 +147,17 @@ h2,P{
 		width:120px;
 		/* border-radius: 10px; */
 		/* background: linear-gradient(to left, #56c4d3,#006476 );  */
-		border-width: 1px;
-		background-color: rgb(255, 255, 255);
+		
 		block-size: fit-content;
 	   margin-left: 30px;
 	   margin-bottom: 20px;
 	}
 	button>p{
-		color: rgb(0, 67, 38);
+		
 		text-align: center;
 		justify-content: center;
 		margin: 4px;
-		margin-bottom: 0pc;
+		margin-bottom: 5px;
 		font-weight:500;
 		font-size: medium;
 		position: relative;
